--- a/index.html
+++ b/index.html
@@ -40,6 +40,78 @@
         </div>
     </nav>
 
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve Table </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                          <label class="col-sm-4 col-form-label">Number of Guests</label>
+                          <div class="col-sm-auto">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option3">
+                                <label class="form-check-label" for="inlineRadio1">3</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option4">
+                                <label class="form-check-label" for="inlineRadio2">4</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option5">
+                                <label class="form-check-label" for="inlineRadio1">5</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option6">
+                                <label class="form-check-label" for="inlineRadio2">6</label>
+                              </div>
+                          </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="form-check-label col-sm-4" for="inline-Radio">Section</label>
+                            <div class="btn-group btn-group-toggle col-sm-auto" data-toggle="buttons">
+                                <label class="btn btn-success">
+                                  <input type="radio" name="options" id="option1" autocomplete="off" checked> Non Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                  <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                </label>
+                            </div> 
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label">Date and Time</label>
+                            <div class="row col-sm-auto">
+                                <div class="col">
+                                    <input type="date" class="form-control" id="date" placeholder="Date">
+                                </div>
+                                <div class="col">
+                                    <input type="time" class="form-control" id="time" placeholder="Time">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row offset-4">
+                            <button type="submit" class="btn btn-secondary btn-md ml-2">Cancel</button>        
+                            <button type="submit" class="btn btn-primary btn-md ml-2">Reserve</button>        
+                        </div>
+                      </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <!-- Modal content-->
@@ -91,9 +163,8 @@
                         </div>
                         <div class="col-md-6">
                             <a role="button" class="btn btn-block nav-link btn-warning text-white"
-                                data-toggle="tooltip" data-html="true"  
-                                title="Or Call us at  <br><strong>+852 12345678</strong>"
-                                data-placement="top" href="#reserveform">Reserve Table</a>
+                                data-toggle="modal" data-target="#reserveModal"
+                                href="#reserveform">Reserve Table</a>
                         </div>
                     </div>
                 </div>
@@ -212,57 +283,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="row row-content justify-content-md-center" id="reserveform">
-            <div class="card col-md-8">
-                <h3 class="card-header bg-warning">Reserve a table</h3>
-                <div class="card-body">
-                    <form>
-                        <div class="form-group row">
-                          <label class="col-sm-2 col-form-label">Number of Guests</label>
-                          <div class="col-sm-10">
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                                <label class="form-check-label" for="inlineRadio1">1</label>
-                              </div>
-                              <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                                <label class="form-check-label" for="inlineRadio2">2</label>
-                              </div>
-                              <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                                <label class="form-check-label" for="inlineRadio1">3</label>
-                              </div>
-                              <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                                <label class="form-check-label" for="inlineRadio2">4</label>
-                              </div>
-                              <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                                <label class="form-check-label" for="inlineRadio1">5</label>
-                              </div>
-                              <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                                <label class="form-check-label" for="inlineRadio2">6</label>
-                              </div>
-                          </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-sm-2 col-form-label">Date and Time</label>
-                            <div class="row">
-                                <div class="col">
-                                    <input type="date" class="form-control" id="date" placeholder="Date">
-                                </div>
-                                <div class="col">
-                                    <input type="time" class="form-control" id="time" placeholder="Time">
-                                </div>
-                            </div>
-                        </div>
-                      </form>
-                  <a href="#" class="btn btn-primary">Reserve</a>
-                </div>
-              </div>
         </div>
     </div>
 
